--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
-<%= yield %>
+<header>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-2">
+				<img src="/assets/logo.png">
+			</div>
+			<div class="col-md-10">
+				<ul>
+					
+				</ul>
+			</div>
+		</div>
+	</div>
+</header>
 
+<main class="container">
+	<%= yield %>
+</main>
+
+<footer></footer>
 </body>
 </html>
