--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,9 @@
  @import "bootstrap";
  @import "font-awesome-sprockets";
  @import "font-awesome";
+ 
+ @import "mapbox";
+ @import "mapbox.surface";
+ @import "tracks";
+
+
