--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -1,3 +1,11 @@
-// Place all the styles related to the tracks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/* Place all the styles related to the tracks controller here.
+They will automatically be included in application.css.
+You can use Sass (SCSS) here: http://sass-lang.com/ */
+
+#map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 600px;
+    width: 100%;
+}
