--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset=utf-8 />
+  <meta name='viewport' content='width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1'>
   <title>WolcuTracks</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
 <header>
 	<div class="container">
 		<div class="row">
