--- a/app/views/tracks/new.html.erb
+++ b/app/views/tracks/new.html.erb
@@ -1,3 +1,5 @@
+
+
 <div class="row">
 	<div class="col-xs-offset-10 col-xs-2" style="text-align: right">
 		<%= link_to raw("<i class='fa fa-save'></i>"), {:action => :update}, :class => "btn-sm btn btn-primary" %>
@@ -5,7 +7,7 @@
 	</div>
 </div>
 <h2>New Track</h2>
-<div class="row">
+<div class="row" ng-app="tracks">
 	<div class="col-xs-6">
 		<fieldset class="form-group">
 	    	<label for="name">Name</label>
@@ -16,11 +18,16 @@
 			<input type="text" name="description" placeholder="Description" class="form-control">
 		</fieldset>
 	</div>
-	<div class="col-xs-6">
+	<div class="col-xs-6" ng-controller="TracksCtrl ">
 		<fieldset class="form-group">
 		    <label for="exampleInputFile">File input</label>
-		    <input type="file" class="form-control-file" id="exampleInputFile">
+		    <input type="file" file-reader="fileContent" />    		
 		    <small class="text-muted">File max size: 2 MB.</small>
+		    <i ng-show="fileContent == true" class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
+			<span class="sr-only">Loading...</span>					   
 	  </fieldset>
+	</div>
+	<div class="col-xs-12">
+		<div id='map'></div>
 	</div>
 </div>
