--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -17,19 +17,19 @@
 				<td>Carbon</td>
 				<td>Ruta carbon cerro san cristobal</td>
 				<td>19-05-2016</td>
-				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :edit}, :class => "btn-sm btn btn-info" %></td>
+				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :new}, :class => "btn-sm btn btn-info" %></td>
 			</tr>
 			<tr>
 				<td>La victoria</td>
 				<td>Sendero de alta montaña.</td>
 				<td>02-04-2016</td>
-				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :edit}, :class => "btn-sm btn btn-info" %></td>
+				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :new}, :class => "btn-sm btn btn-info" %></td>
 			</tr>
 			<tr>
 				<td>Manquehue</td>
 				<td>Clasica Ruta de ascenso al cerro Manquehue, Santiago - Chile.</td>
 				<td>19-02-2016</td>
-				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :edit}, :class => "btn-sm btn btn-info" %></td>
+				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :new}, :class => "btn-sm btn btn-info" %></td>
 			</tr>
 		</tbody>
 	</table>
