--- a/app/views/tracks/new.html.erb
+++ b/app/views/tracks/new.html.erb
@@ -2,14 +2,15 @@
 
 <div class="row">
 	<div class="col-xs-offset-10 col-xs-2" style="text-align: right">
-		<%= link_to raw("<i class='fa fa-save'></i>"), {:action => :update}, :class => "btn-sm btn btn-primary" %>
+		<%= link_to raw("<i class='fa fa-save'></i>"), {:action => :create}, :class => "btn-sm btn btn-primary" %>
 		<%= link_to raw("<i class='fa fa-reply'></i>"), {:action => :index}, :class => "btn-sm btn btn-secondary active" %>
 	</div>
 </div>
 <h2>New Track</h2>
-<div class="row" ng-app="tracks">
-	<div class="col-xs-6">
-		<fieldset class="form-group">
+<div class="row" ng-app="tracks">	
+	<%= render 'form', object: @track %>
+	<!--<div class="col-xs-6">
+		<fieldset class="form-group">			
 	    	<label for="name">Name</label>
 			<input type="text" name="name" placeholder="Name" class="form-control">
 		</fieldset>
@@ -17,8 +18,8 @@
 	    	<label for="description">Description</label>
 			<input type="text" name="description" placeholder="Description" class="form-control">
 		</fieldset>
-	</div>
-	<div class="col-xs-6" ng-controller="TracksCtrl ">
+	</div>-->
+	<!--<div class="col-xs-6" ng-controller="TracksCtrl ">
 		<fieldset class="form-group">
 		    <label for="exampleInputFile">File input</label>
 		    <input type="file" file-reader="fileContent" />    		
@@ -26,8 +27,6 @@
 		    <i ng-show="fileContent == true" class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
 			<span class="sr-only">Loading...</span>					   
 	  </fieldset>
-	</div>
-	<div class="col-xs-12">
-		<div id='map'></div>
-	</div>
+	</div>-->
+	
 </div>
