--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -9,3 +9,16 @@ You can use Sass (SCSS) here: http://sass-lang.com/ */
     height: 600px;
     width: 100%;
 }
+
+#loading{
+	background: rgba(255,255,255,0.7);
+    width: 100%;
+    height: 600px;
+    z-index: 1000;
+    position: absolute;
+    text-align: center;
+    i{    
+    	font-size: 10em;
+    	margin-top: 260px;
+	}
+}
