--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -22,3 +22,7 @@ You can use Sass (SCSS) here: http://sass-lang.com/ */
     	margin-top: 260px;
 	}
 }
+
+#map-container{
+    min-height: 600px;
+}
