--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -2,35 +2,34 @@
 	<div class="col-xs-offset-10 col-xs-2" style="text-align: right">
 		<%= link_to raw("<i class='fa fa-plus'></i>"), {:action => :new}, :class => "btn-sm btn btn-primary" %>
 	</div>
+	<h2>My Tracks</h2>
 </div>
-<h2>My Tracks</h2>
+  <% if flash[:alert] %>
+    <p class="flash-error"><%= flash[:alert] %></p>
+  <% end %>
+  <% if flash[:notice] %>
+    <p class="flash-notice"><%= flash[:notice] %></p>
+  <% end %>
 <div class="row">
 	<table class="table table-striped table-bordered">
 		<thead>
 			<th>Name</th>
 			<th>Description</th>
 			<th>Date created</th>
-			<th>Edit</th>
+			<th colspan="3">Action</th>
 		</thead>
 		<tbody>
-			<tr>
-				<td>Carbon</td>
-				<td>Ruta carbon cerro san cristobal</td>
-				<td>19-05-2016</td>
-				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :new}, :class => "btn-sm btn btn-info" %></td>
-			</tr>
-			<tr>
-				<td>La victoria</td>
-				<td>Sendero de alta montaña.</td>
-				<td>02-04-2016</td>
-				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :new}, :class => "btn-sm btn btn-info" %></td>
-			</tr>
-			<tr>
-				<td>Manquehue</td>
-				<td>Clasica Ruta de ascenso al cerro Manquehue, Santiago - Chile.</td>
-				<td>19-02-2016</td>
-				<td><%= link_to raw("<i class='fa fa-edit'></i>"), {:action => :new}, :class => "btn-sm btn btn-info" %></td>
-			</tr>
+			<% @tracks.each do |track| %>
+				<tr>
+					<td><%= track.name %></td>
+					<td><%= track.description %></td>
+					<td><%= track.created_at %></td>
+					<td><%= link_to "Show", track %></td>
+				    <td><%= link_to "Edit", edit_track_path(track) %></td>
+				    <td><%= link_to "Remove", track, method: :delete, data: { confirm: "Are you sure?" } %></td>
+					
+				</tr>
+			<% end %>			
 		</tbody>
 	</table>
 </div>
